Revert "SCR #391758 - fix: fix text truncating in active bonus on the first profile and tournament-banner"
This reverts commit 4df223dd9531461d464aebb6f75531687805b7a8.

--- a/src/modules/tournaments/components/tournament/components/tournament-banner/styles/themes/_default.scss
+++ b/src/modules/tournaments/components/tournament/components/tournament-banner/styles/themes/_default.scss
@@ -141,6 +141,7 @@
     &__description {
         @include text.get-text-style(ef.get-value($themeDefault, 'descriptionFont'), ef.get-value($themeDefault, 'descriptionColor'));
         @include bm.get-mq-map('max-width', $themeDefault, 'descriptionWidth');
+        @include bm.get-mq-map('margin', $themeDefault, 'descriptionMargin');
         @include bm.lineClamp(3);
     }
 
@@ -240,3 +241,4 @@
         transform: rotate(360deg);
     }
 }
+
